# digit-qt

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/aperture/: CMakeLists.txt
src/aperture/geometry/: Bounds.cpp  Ellipse.cpp  Point.cpp  Polygon.cpp  Rectangle.cpp  Shape.cpp
src/aperture/include/geometry/: Bounds.h  CoordinateSystem.h  Ellipse.h  Handle.h  Point.h  Polygon.h  Rectangle.h  Shape.h
src/aperture/include/visibility/: IDataProviders.h  ShapeCollection.h  TypeLimits.h  VisibilityChecker.h  VisibilityMask.h  VisibilityMaskBuilder.h  VisibilityMaskProvider.h
src/aperture/visibility/: ShapeCollection.cpp  TypeLimits.cpp  VisibilityChecker.cpp
src/core/: AutoSeedPlacement.cpp  AutoSeedPlacement.h  CMakeLists.txt  FringeOrdering.cpp  FringeOrdering.h  FringeTracingData.h  Measurement.cpp  Measurement.h  ModalAnalysisResult.h  NumberedFringeLine.h  PhaseMap.h  ShapeCollectionAccess.h
src/core/commands/: AddSeedCommand.cpp  AddSeedCommand.h  AddSeedsCommand.cpp  AddSeedsCommand.h  AddShapeCommand.cpp  AddShapeCommand.h  CMakeLists.txt  RemoveSeedCommand.cpp  RemoveSeedCommand.h  RemoveShapeCommand.cpp  RemoveShapeCommand.h  ReplaceShapeCommand.cpp  ReplaceShapeCommand.h  ReplaceTracedLineCommand.cpp  ReplaceTracedLineCommand.h  SetFringeOrderCommand.cpp  SetFringeOrderCommand.h
src/core/pipeline/: CMakeLists.txt  NotYetImplementedStage.cpp  NotYetImplementedStage.h  Pipeline.cpp  Pipeline.h  PipelineStage.cpp  PipelineStage.h  PipelineStageId.cpp  PipelineStageId.h
src/core/pipeline/stages/: ApertureMaskingStage.cpp  ApertureMaskingStage.h  CMakeLists.txt  ModalAnalysisStage.cpp  ModalAnalysisStage.h  PhaseReconstructionStage.cpp  PhaseReconstructionStage.h  SetupStage.cpp  SetupStage.h  WavefrontReconstructionStage.cpp  WavefrontReconstructionStage.h
src/core/pipeline/stages/fringe_tracing/: BinaryThinningTracker.cpp  BinaryThinningTracker.h  CMakeLists.txt  IFringeTracer.h  ScanlineExtremumTracker.cpp  ScanlineExtremumTracker.h  SeedStepTracer.cpp  SeedStepTracer.h  SequentialFringeTracker.cpp  SequentialFringeTracker.h  StructureTensorTracker.cpp  StructureTensorTracker.h
src/core/pipeline/stages/fringe_tracing/scanline_extremum/: CMakeLists.txt  FringeConstructor.cpp  FringeConstructor.h  MiddleAlgorithm.cpp  MiddleAlgorithm.h  RedCenterDetector.cpp  RedCenterDetector.h  ScanlineExtremumTypes.h
src/core/pipeline/stages/phase_reconstruction/: CMakeLists.txt  PhaseReconstructor.cpp  PhaseReconstructor.h
src/gui/: CMakeLists.txt  IconFactory.cpp  IconFactory.h  MainWindow.cpp  MainWindow.h  NotImplementedPage.cpp  NotImplementedPage.h  ParametersDock.cpp  ParametersDock.h  PipelineTreeDock.cpp  PipelineTreeDock.h
src/gui/canvas/: BoundaryEditController.cpp  BoundaryEditController.h  BoundaryItem.cpp  BoundaryItem.h  CMakeLists.txt  ColorLegendWidget.cpp  ColorLegendWidget.h  FringeTracingController.cpp  FringeTracingController.h  ImageCanvas.cpp  ImageCanvas.h  PhaseMapView.cpp  PhaseMapView.h  SeedItem.cpp  SeedItem.h  Surface3DView.cpp  Surface3DView.h  TracedLineItem.cpp  TracedLineItem.h
src/io/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.h
translations/: CMakeLists.txt  DigitQt_ru.ts
